2004-11-27  Brian Warner  <warner@lothar.com>

	* util.py (SignalStateManager.save): don't save signal handlers
	for SIGKILL and SIGSTOP, since we can't set them anyway.
	Python2.4c1 raises an error when you try.

2004-11-07  Brian Warner  <warner@lothar.com>

	* twisted/test/test_internet.py: correctly check for SSL support.
	Improve timeout for testCallLater and testGetDelayedCalls to avoid
	spurious failures on slow test systems. Close sockets in
	PortStringification to fix trial warnings.

	* twisted/internet/ssl.py: add a comment describing the correct
	way to import twisted.internet.ssl (since it might partially fail
	if OpenSSL is not available)

2004-11-06  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/trial/assertions.py: assertRaises/failUnlessRaises now 
	returns the caught exception to allow tests to inspect the contents.

2004-11-02  Brian Warner  <warner@lothar.com>

	* loopback.py (loopbackTCP): use trial's spinWhile and spinUntil
	primitives instead of doing reactor.iterate() ourselves. Make sure
	to wait for everything before finishing.

2004-10-26  Cory Dodt <corydodt@twistedmatrix.com>

	* twisted/python/{which,process}.py,
	  twisted/test/{test_wprocess,wprocess_for_testing}.py,
	  twisted/internet/{default,error,wprocess,process}.py:  back out
	  wprocess due to test failures in wprocess and new trial.  Resolves 
	  issue 760.

2004-10-24  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* TCP: Half-close of write and read for TCP connections, including
	protocol notification for protocols that implement
	IHalfCloseableProtocol.

2004-10-07  Jp Calderone  <exarkun@twistedmatrix.com>

	* Transports: Add a maximum to the number of bytes that will be
	held in the write buffer even after they have been sent.  This
	puts a maximum on the cost of writing faster than the network
	can accommodate.

2004-10-06  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* Transports: New TCP/SSL/etc. buffering algorithm. All writes are